[B]0.9.8[/B]
- Endurance tests executed
- Fixed typo in holidays web-access
- Do not enter error mode if a 'SetOnce' actuator is set twice. Just don't execute and log info
- Fixed timer overflow (at end of day)
- Fixed deletion of offset timers during update (they are only deleted when settings change or fired)
- Fixed dependency issue
- Fixed typo in settings description
- Added reboot and shutdown options to reboot or shutdown the system from the web interface

[B]0.9.7[/B]
- Hardware tests executed
- Updated StatusLightFlash setting on switched on actuators during startup
- Fixed behavior on adding sensor, toggle setting
- Added yellow status light during webaccess
- On devices webview for blind control set up/down instead of on/ off

[B]0.9.6[/B]
- Fixed bug in updating sinrise/ sunset timer every 2 seconds during the first minute of a new day
- Fixed bug in GPIO callbacks
- Fixed bug in changing settings
- Fixed bug in lirc send interface
- Added capturing of software errors and tracebacks
- Fixed bug in error reply on lirc send

[B]0.9.5[/B]
- Minor change to timers status view
- Added home and trip days to program different timers when you are at home all day or away
- Added date/ time in localized format for printing
- Modified date and time input boxes to local format
- Changed date and time input boxes look and feel
- Added log window to display logging in web server (maximum of 100 latest log lines to save memory)
- Updated messaging to domoticz

[B]0.9.0[/B]
- (Almost there, lots of testing and bugfixing) Everything is tested, but some only with simulated hardware and no endurance test is done yet
- Added GPIO hardware (Pigpio)
- Added statuslight to be controlled by GPIO
- Fixed daylight saving time mismatch on local sunrise/ sunset
- Fixed remote webserver access
- Fixed typos in Lirc module
- Fixed http 500 when deleting required link in process
- Web interface changed visual color and hover action Ok/ Cancel field on Delete option