@@ -1,3 +1,6 @@
+[B]0.9.9[/B]
+- Fixed small bug to make it possible for a timer to be active during home-day and trip-day
+
 [B]0.9.8[/B]
 - Endurance tests executed
 - Fixed typo in holidays web-access
